fix dark mode landing page colors

--- a/src/styles/dark-mode.scss
+++ b/src/styles/dark-mode.scss
@@ -121,8 +121,37 @@ $offwhite: #ffffffd4;
       color: rgb(253, 237, 130);
     }
   }
-}
 
-.Dark-Mode .App {
-  background: $background;
+  @keyframes slide-in-dark {
+    0% {
+      top: 100vh;
+      opacity: 0%;
+    }
+
+    70% {
+      top: 0vh;
+      opacity: 50%;
+    }
+
+    100% {
+      top: 2.5vh;
+      opacity: 100%;
+      border: 1px solid blue;
+      padding: 40px 20px;
+      border: 1px solid #3434a5;
+      box-shadow: inset 0 0 0 2px #3434a4, 10px -10px 0 -3px #121212,
+        10px -10px #40803e, 20px -20px 0 -3px #121212, 20px -20px #c0ab41,
+        30px -30px 0 -3px #121212, 30px -30px #b77c51, 40px -40px 0 -3px #121212,
+        40px -40px #b84444;
+    }
+  }
+
+  .slide-in {
+    animation: slide-in-dark 2.8s;
+    animation-fill-mode: forwards;
+  }
+
+  .Dark-Mode .App {
+    background: $background;
+  }
 }
